Fixing edd setting top-screen notice to not cause content shift

--- a/assets/css/admin/promos/style.scss
+++ b/assets/css/admin/promos/style.scss
@@ -5,7 +5,6 @@
 	margin-left: -20px;
 	padding: 12px 32px 12px 20px;
 	background: #2d6ca2;
-	display: none;
 
 	@media screen and ( min-width: 783px ) {
 		padding: 10px 46px 10px 22px;
